add open in calab badge

--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)\n",
     "# はじめに\n",
     "\n",
     "このチュートリアルでは**グラフの集合**に対するさまざまな計算を高速に実行するためのPythonライブラリである[Graphillion](https://github.com/takemaru/graphillion)を紹介します．Graphillionを用いることでグラフに対する以下のような計算を，数行のコードで簡単に実行できます．\n",
