--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)\n",
     "# はじめに\n",
     "\n",
     "このチュートリアルでは**グラフの集合**に対するさまざまな計算を高速に実行するためのPythonライブラリである[Graphillion](https://github.com/takemaru/graphillion)を紹介します．Graphillionを用いることでグラフに対する以下のような計算を，数行のコードで簡単に実行できます．\n",
@@ -29,6 +28,7 @@
     "## Graphillionの位置づけ\n",
     "\n",
     "グラフを扱うためのライブラリは多数存在します．たとえば [NetworkX](https://networkx.github.io/) はグラフをを扱うな代表的なPythonライブラリであり，グラフを対象とした様々なアルゴリズムの実行や可視化などの豊富な機能を有しています．\n",
+    "\n",
     "Graphillionはグラフの集合の処理に特化した機能を提供するライブラリであり，NetworkXのような多様な機能は有していません．一方でグラフ集合の処理に関しては他のソフトウェアでは実現できない多数の機能を有しています．グラフ集合を扱うことで実現できることについては以降のチュートリアルで紹介します．\n",
     "\n",
     "なお，GraphillionはNetworkXと連携して利用することも可能です．たとえばGraphillionの実行結果をNetworkXに渡して，NetworkXの各種機能を利用することができます．\n",
@@ -53,22 +53,9 @@
     "6. [GraphSet](06_graph_set.ipynb): Graphillionではグラフの集合を表すGraphSetとよばれるオブジェクトを作成し，様々な操作を実行することができます．この章ではGraphSetに対して行える代表的な操作を紹介します．\n",
     "\n",
     "7. [Graphillionによる最適化](07_optimization.ipynb): Graphillionを用いることで，グラフに関する最適化問題を解くことができます．この章ではGraphillionを用いて最適化問題を解く方法と，Graphillionが得意とする最適化問題の種類について説明します．\n",
-    "8. [ネットワーク信頼性の計算](08_network_reliability.ipynb): \n",
-    "9. 数え上げによる信頼性計算\n",
-    "10. 練習問題\n"
+    "8. [ネットワーク信頼性の計算](08_network_reliability.ipynb): Graphillionの機能を活用することで，ネットワークの故障に対する強さを調べることができます．\n",
+    "9. [Graphillion 実践ガイド](08_practtical_guide.ipynb) Graphillionで効率的に問題を解くための指針をいくつか紹介します．"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
