--- a/ja/03_graph_and_combinatorial_explosion.ipynb
+++ b/ja/03_graph_and_combinatorial_explosion.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,49 +17,59 @@
     "一方で，グラフに関する全ての問題が効率的に解けるというわけではありません．そのような問題の例として**最長経路問題**があります．最長経路問題\n",
     "とは，グラフ中の2つの頂点が与えられたときに，その2つを結ぶ経路のうち，もっとも辺の重みの合計が大きなものを求める問題です．\n",
     "\n",
+    "<img src=\"img/03/shortest_and_longest_path.png\" alt=\"最短経路，最長経路の例\" style=\"height: 150px;\"/>\n",
+    "\n",
     "最長経路問題の設定は最短経路問題と似ていますが，問題の難しさは大きく異なります．最短経路を求めるために必要な計算時間は，グラフの頂点・辺の数に対してほぼ線形となります．つまり，グラフの頂点や辺の数が2倍，3倍になったとしても，最短経路を求めるために必要な計算時間は2倍，3倍におさまります．\n",
     "\n",
-    "一方，最長経路問題に対してはそのような効率的な計算方法は現在のところ見つかっていません．現在知られている最も効率的な解法であっても，グラフの大きさに対して**指数的**に計算時間が増大することがしられています．つまり，$n$本の辺をもったグラフの最長経路を求めるためにかかる計算時間と，$2n$本の辺をもったグラフの最長経路を求めるのにかかる時間とを比較すると，後者のほうが$k^n$倍もの時間がかかるということを意味しています．ここで $k$ は適当な正の整数です．仮に$k=2$だったとすると， 辺が1つ増えると計算時間が2倍となり，2本，3本と増えると4倍，8倍…と計算に時間がかかるようになることを意味しています．\n",
+    "一方，最長経路問題に対してはそのような効率的な計算方法は現在のところ見つかっていません．現在知られている最も効率的な解法であっても，グラフの大きさに対して**指数的**に計算時間が増大することがしられています．つまり，$n$本の辺をもったグラフの最長経路を求めるためにかかる計算時間と，$2n$本の辺をもったグラフの最長経路を求めるのにかかる時間とを比較すると，後者のほうが$k^n$倍もの時間がかかるということを意味しています．ここで $k$ は適当な正の整数です．\n",
+    "\n",
+    "仮に$k=2$だったとすると， 辺が1つ増えると計算時間が2倍となり，2本，3本と増えると4倍，8倍…と計算に時間がかかるようになることを意味しています．\n",
     "\n",
     "このような指数的な計算量の増加はすさまじく，たとえば30本辺が追加されると計算時間は10億倍に膨れ上がることになります．もとの問題の最長経路が1秒で求められたのだとすると，辺を追加した問題を解くためには*30年以上* かかる計算になります．\n",
     "\n",
-    "最長経路問題は*NP困難*とよばれる問題のクラスに属することが知られています．NP困難な問題を解くためのアルゴリズムは，入力の大きさ（最長経路問題でいえばグラフの頂点，辺の数）に対して指数的に時間がかかる方法しか発見されていません．最長経路問題のほかにも，巡回セールスマン問題やシュタイナー木問題，最大カット問題など，グラフに関連するNP困難問題は多数知られています．\n",
+    "最長経路問題は**NP困難**とよばれる問題のクラスに属することが知られています．NP困難な問題を解くためのアルゴリズムは，入力の大きさ（最長経路問題でいえばグラフの頂点，辺の数）に対して指数的に時間がかかる方法しか発見されていません．最長経路問題のほかにも，巡回セールスマン問題やシュタイナー木問題，最大カット問題など，グラフに関連するNP困難問題は多数知られています．\n",
     "\n",
     "\n",
     "\n",
     "## 組合せ爆発\n",
     "\n",
-    "最長経路問題を解くことはなぜ難しいのでしょうか．端的に言えば，それは解を見つけるために調べなければならない答えの候補の数が非常に多いからです．たとえば以下のグラフにおいて頂点sから頂点gまでの経路が何通りあるかを考えてみましょう．なお，ある経路中では同じ頂点を二度通過することはないものとします．\n",
+    "最長経路問題を解くことはなぜ難しいのでしょうか．端的に言えば，それは解を見つけるために調べなければならない答えの候補の数が非常に多いからです．たとえば以下のグラフにおいて頂点1から頂点9までの経路が何通りあるかを考えてみましょう．なお，ある経路中では同じ頂点を二度通過することはないものとします．\n",
     "\n",
-    "図: grid\n",
+    "<img src=\"img/03/grid_graph.png\" alt=\"グリッドグラフ\" style=\"height: 150px;\"/>\n",
+    "\n",
+    "このグラフには以下の12通りの経路が存在します．\n",
+    "\n",
+    "<img src=\"img/03/grid_graph_paths.png\" alt=\"グリッドグラフの経路\" style=\"width: 400px;\"/>\n",
     "\n",
     "\n",
     "\n",
-    "このグラフの全ての経路は以下に上げるとおりです．次に，少しだけ大きくした以下のグラフについて，同様に頂点sからgまでの経路が何通りあるかを調べてみましょう．\n",
+    "次に，少しだけ大きくした以下のグラフについて，同様に対角の頂点1から頂点16までの経路が何通りあるかを調べてみましょう．\n",
     "\n",
-    "図: 列挙\n",
+    "<img src=\"img/03/large_grid_graph.png\" alt=\"大きいグラフ\" style=\"height: 200px;\"/>\n",
     "\n",
-    "このグラフの経路はx通りです．このようにグラフの大きさが大きくなるにつれて，経路の数が急激に増加することが分かります．最長経路を求めるためには，経路を一つずつ取り出してその長さを比較する必要があります．そのため，経路の総数が指数的に増加すると計算時間も指数的に増加してしまうのです．\n",
     "\n",
-    "図: grid\n",
+    "\n",
+    "このグラフ中で経路は184通り存在します．このようにグラフの大きさが大きくなるにつれて，経路の数が急激に増加することが分かります．最長経路を求めるためには，経路を一つずつ取り出してその長さを比較する必要があります．そのため，経路の総数が指数的に増加すると計算時間も指数的に増加してしまうのです．\n",
+    "\n",
+    "\n",
     "\n",
     "最長経路問題の例では，経路の総数が問題サイズが大きくなるにつれて指数的に増加するために問題を解くのが困難になっていました．経路は辺の組合せによって構成されるため，この現象は経路となりうる辺の組合せの総数が指数的に増加したとみなすこともできます．このように，入力サイズが大きくなるにつれて組合せの総数が指数的に増加する現象を**組合せ爆発**とよびます．\n",
     "\n",
-    "図:列挙\n",
     "\n",
     "グラフを扱う課題の困難さは組合せ爆発に起因します．一方で最短経路問題など，組合せ爆発の影響を受けない問題もあります．全ての可能な経路を考慮しないと解が求まらないのは最短路問題のときも同様です．しかし，最短経路問題を解く際には明示的に全ての可能な組合せを調べなくてもよいため，効率的に解を求めることができます．\n",
     "\n",
     "\n",
     "\n",
     "\n",
+    "## この章のまとめ\n",
     "\n",
-    "## 組合せ爆発とGraphillion\n",
-    "\n",
-    "組合せ爆発はやっかいな課題です．解きたい問題が組合せ爆発を起こす場合，現実的な時間で答えを求めることが難しい可能性が高いといえます．そのような問題を解くためには，\n",
+    "組合せ爆発はやっかいな課題です．解きたい問題が組合せ爆発を起こす場合，現実的な時間で答えを求めることが難しい可能性が高いといえます．\n",
+    "そのような問題に直面した場合，これまでは近似的な方法，つまりもっともよい答えが見つかる保証はないけど，現実的な時間で答えを求めることが\n",
+    "できる方法が広く用いられていました．\n",
     "\n",
     "Graphillionはそのような組合せ爆発を起こすグラフの問題に対して，既存法とは全く別のアプローチで挑む方法を提供します．近似的な解法は全ての組合せを見ないことによって計算を高速に実行していたのに対し，Graphillionは組合せを*圧縮して表現*することによって効率的な計算を実現します．\n",
     "\n",
-    "次章で早速Graphillionの機能を試してみましょう．"
+    "[次章](04_graphillion_first_step.ipynb)で早速Graphillionの機能を試してみましょう．"
    ]
   }
  ],
