--- a/ja/06_graph_set.ipynb
+++ b/ja/06_graph_set.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ここに挙げたほかにも特定のGraphillionは特定のグラフ集合に取り上げた構築方法を提供しています．詳細はGraphillionの公式ドキュメントを参照ください．\n",
+    "ここに挙げたほかにも特定のGraphillionは特定のグラフ集合に特化した構築方法を提供しています．詳細はGraphillionの公式ドキュメントを参照ください．\n",
     "\n",
     "いくつか具体的な実行例をみていきましょう．"
    ]
