--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -61,9 +61,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit",
+   "display_name": "'Python Interactive'",
    "language": "python",
-   "name": "python37664bit1a5444a133b9480d833ba634f3cf5666"
+   "name": "bba034e0-72a7-4fbb-aae5-be83db0c25ce"
   },
   "language_info": {
    "codemirror_mode": {
@@ -75,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
