--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -72,8 +72,27 @@
         "\n",
         "Colabを利用するためにはGoogleアカウントが必要となります．Colabはほとんどの主要なブラウザで動作します．最新バージョンのChrome, Firefox, Safariでは完全に動作することが検証されています．\n",
         "\n",
-        "\n"
+        "\n",
+        "## Colab環境のセットアップ\n",
+        "チュートリアルを実行する前に，以下のセルを実行してColab環境にGraphillionとチュートリアル用のpythonモジュールをインストールします．\n",
+        "\n",
+        "左上の実行ボタンをクリックするか，セルを選択して`ctrl+enter`でセルを実行することができます．"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G_zjzpAiPIty",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install graphillion\n",
+        "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
+        "!cp graphillion_tutorial/ja/tutorial_util.py ."
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
