Colaboratory を使用して作成しました

--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -4,21 +4,8 @@
   "metadata": {
     "file_extension": ".py",
     "kernelspec": {
-      "display_name": "Python 3.7.6 64-bit",
-      "language": "python",
-      "name": "python37664bit1a5444a133b9480d833ba634f3cf5666"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.6"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "mimetype": "text/x-python",
     "name": "python",
@@ -84,12 +71,58 @@
       "metadata": {
         "id": "G_zjzpAiPIty",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "2f64cc65-73cf-4bb0-bbfe-4f3feb3b2e9e"
       },
       "source": [
         "!pip install graphillion\n",
         "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
         "!cp graphillion_tutorial/ja/tutorial_util.py ."
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting graphillion\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3d/5b/5104de075566e8e5c3588a017f988dcb00ef53558bb603c5acc7630558a5/Graphillion-1.3.tar.gz (1.1MB)\n",
+            "\r\u001b[K     |▎                               | 10kB 14.9MB/s eta 0:00:01\r\u001b[K     |▋                               | 20kB 3.2MB/s eta 0:00:01\r\u001b[K     |█                               | 30kB 4.0MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40kB 2.6MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51kB 2.9MB/s eta 0:00:01\r\u001b[K     |█▉                              | 61kB 3.5MB/s eta 0:00:01\r\u001b[K     |██                              | 71kB 3.7MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81kB 4.0MB/s eta 0:00:01\r\u001b[K     |██▊                             | 92kB 4.5MB/s eta 0:00:01\r\u001b[K     |███                             | 102kB 4.3MB/s eta 0:00:01\r\u001b[K     |███▎                            | 112kB 4.3MB/s eta 0:00:01\r\u001b[K     |███▋                            | 122kB 4.3MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133kB 4.3MB/s eta 0:00:01\r\u001b[K     |████▏                           | 143kB 4.3MB/s eta 0:00:01\r\u001b[K     |████▌                           | 153kB 4.3MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████                           | 174kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████▍                          | 184kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████▋                          | 194kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████                          | 204kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 215kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 225kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 235kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████▏                        | 245kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████▌                        | 256kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████▊                        | 266kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████                        | 276kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████▍                       | 286kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████▋                       | 296kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████                       | 307kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████▎                      | 317kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████▌                      | 327kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 337kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████▏                     | 348kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 358kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████▊                     | 368kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████                     | 378kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████▎                    | 389kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████▋                    | 399kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████                    | 409kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████▏                   | 419kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 430kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 440kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 450kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 460kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 471kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 481kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 491kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 501kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 512kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 522kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 532kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 542kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████                | 552kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 563kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 573kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 583kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████▎              | 593kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 604kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 614kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 624kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 634kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████▊             | 645kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 655kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████▍            | 665kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 675kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 686kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 696kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████▌           | 706kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 716kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████▏          | 727kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████▍          | 737kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 747kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 757kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████▍         | 768kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 778kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 788kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 798kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 808kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 819kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████▏       | 829kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 839kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 849kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 860kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 870kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 880kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 890kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 901kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 911kB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▉     | 921kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 931kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▍    | 942kB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▊    | 952kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 962kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 972kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 983kB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 993kB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 1.0MB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 1.0MB 4.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▉  | 1.0MB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.0MB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 1.0MB 4.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 1.1MB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 1.1MB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▎| 1.1MB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 1.1MB 4.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▉| 1.1MB 4.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1MB 4.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from graphillion) (0.16.0)\n",
+            "Building wheels for collected packages: graphillion\n",
+            "  Building wheel for graphillion (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for graphillion: filename=Graphillion-1.3-cp36-cp36m-linux_x86_64.whl size=1728298 sha256=b546e68c230c25e659e7e5f895dfe49aa5c5bf1aebb280af565ea4277a3c250a\n",
+            "  Stored in directory: /root/.cache/pip/wheels/f5/11/37/c871e165ed219369e237be48be2c7cf989bc034699aeee77c8\n",
+            "Successfully built graphillion\n",
+            "Installing collected packages: graphillion\n",
+            "Successfully installed graphillion-1.3\n",
+            "Cloning into 'graphillion_tutorial'...\n",
+            "remote: Enumerating objects: 112, done.\u001b[K\n",
+            "remote: Counting objects: 100% (112/112), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (81/81), done.\u001b[K\n",
+            "remote: Total 112 (delta 50), reused 82 (delta 27), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (112/112), 6.33 MiB | 15.22 MiB/s, done.\n",
+            "Resolving deltas: 100% (50/50), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-lpqmdNSPhst",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from graphillion import GraphSet, tutorial\n",
+        "from tutorial_util import draw_zdd, draw_subgraph\n",
+        "\n",
+        "GraphSet.set_universe(tutorial.grid(2, 2))\n",
+        "paths = GraphSet.paths(1, 9)"
       ],
       "execution_count": 0,
       "outputs": []
