--- a/ja/01_introduction.ipynb
+++ b/ja/01_introduction.ipynb
@@ -21,8 +21,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3HV3Smnxntau",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "3HV3Smnxntau"
       },
       "source": [
         "# はじめに\n",
