--- a/ja/04_graphillion_first_step.ipynb
+++ b/ja/04_graphillion_first_step.ipynb
@@ -174,7 +174,7 @@
         "colab_type": "text"
       },
       "source": [
-        "次にこのグリッドグラフ上の経路の集合を表すGraphSetをつくっていきます．まず，`GraphSet`クラスにに経路を考える対象となるグリッドグラフ`grid`を登録します．"
+        "次にこのグリッドグラフ上の経路の集合を表すGraphSetをつくっていきます．まず，`GraphSet`クラスに経路を考える対象となるグリッドグラフ`grid`を登録します．"
       ]
     },
     {
