--- a/ja/06_graph_set.ipynb
+++ b/ja/06_graph_set.ipynb
@@ -35,6 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install graphillion\n",
+    "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
+    "!cp graphillion_tutorial/ja/tutorial_util.py ."
     "from graphillion import GraphSet\n",
     "from tutorial_util import draw_subgraph"
    ]
